[metadata]
name = test-pbr
summary = Test PBR requirement
maintainer = Richard Pioso
maintainer_email = richard_pioso@dell.com
home-page = https://tbd
license = Apache-2
classifier =
    Development Status :: 3 - Alpha
    Environment :: OpenStack
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    test_pbr

[entry_points]
console_scripts =
    test-pbr = test_pbr:main

[pbr]
warnerrors = True
